--- a/casino/public/css/index.css
+++ b/casino/public/css/index.css
@@ -13,23 +13,25 @@ body {
 }
 
 /*--------------NavBar------------*/
-.navbar-fixed {
+.navbar {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    z-index: 1000;
-    /* Asegura que la barra de navegación esté por encima de otros elementos */
-    background-color: rgba(255, 255, 255, 0);
-    /* Cambia el valor alpha para ajustar la transparencia */
+    width: 100%;
+    background-color: transparent; /* Fondo inicialmente transparente */
+    transition: background-color 0.3s ease; /* Transición suave */
+    z-index: 1000; /* Asegurar que la barra de navegación esté por encima de otros elementos */
 }
 
+.navbar.opaque {
+    background-color: rgb(24, 24, 28, 0.8);
+}
 
 
 /*----------Home-------------*/
 .bg-image {
     position: relative;
-    background-image: url('/images/trucos-usan-casinos-gastes-dinero.jpg');
+    background-image: url('/storage/images/trucos-usan-casinos-gastes-dinero.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -72,7 +74,7 @@ body {
 }
 
 .btn-dorado {
-    background-color: rgb(159, 142, 98);
+    background-color: #9F8E62;
 }
 
 .btn-dorado:hover {
