feat casino 04/03 casa

--- a/casino/public/css/index.css
+++ b/casino/public/css/index.css
@@ -17,9 +17,9 @@ section {
 }
 
 /* Estilo no aplicado */
-/* .botonGeneral {
+.botonGeneral {
     background-image: linear-gradient(to right, rgb(131, 111, 62), rgb(153, 153, 106));
-} */
+}
 
 .botonGeneral:hover {
     background-image: linear-gradient(to right, rgb(136, 110, 46), rgb(156, 156, 79));
@@ -90,9 +90,9 @@ section {
 }
 
 /* Estilo no aplicado */
-/* .btn-dorado {
+.btn-dorado {
     background-color: #9F8E62;
-} */
+}
 
 
 .btn-dorado:hover {
