--- a/MilitaryWeb/public/css/home.css
+++ b/MilitaryWeb/public/css/home.css
@@ -1,6 +1,7 @@
 /*------------------------------------------Home------------------------------------------*/
 section {
-    background-color: linear-gradient(to top, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
+    background-color: black;
+    background-image: linear-gradient(to bottom, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
 }
 
 /*-------------------------------------Carrousel-Home-------------------------------------*/
