--- a/MilitaryWeb/public/css/home.css
+++ b/MilitaryWeb/public/css/home.css
@@ -1,4 +1,4 @@
-/*--------------NavBar------------*/
+/*----------------------------------------------------------------NavBar----------------------------------------------------------------*/
 .navbar {
     position: fixed;
     top: 0;
@@ -16,14 +16,14 @@
     background-color: rgb(24, 24, 28, 0.8);
 }
 
-/*-------------------------------------Home-Principal-------------------------------------*/
+/*----------------------------------------------------------------Home-Principal----------------------------------------------------------------*/
 .home-Principal {
     background-color: black;
     background-image: linear-gradient(to bottom, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
 }
 
-/*-------------------------------------Carrousel-Home-------------------------------------*/
-/*----------------------------------------En-Desuso---------------------------------------*/
+/*----------------------------------------------------------------Carrousel-Home----------------------------------------------------------------*/
+/*-------------------------------------------------------------------En-Desuso----------------------------------------------------------------*/
 .bg-image {
     position: relative;
     background-position: center;
@@ -58,4 +58,111 @@
         padding: 20px;
         padding-top: 100px;
     }
+}
+
+/*------------------------------------------------------------------------Home----------------------------------------------------------------*/
+/*----------------------------------------------------------------Botones-Login-Register----------------------------------------------------------------*/
+.buttonHome {
+    width: 10em;
+    position: relative;
+    height: 3.5em;
+    border: 3px ridge #149CEA;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    transition: 1s;
+    border-radius: 0.3em;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.buttonHome:hover::before,
+.buttonHome:hover::after {
+    transform: scale(0)
+}
+
+.buttonHome:hover {
+    box-shadow: inset 0px 0px 25px #1479EA;
+}
+/*----------------------------------------------------------------Botones-Login-Register----------------------------------------------------------------*/
+
+
+
+/*------------------------------------------------------------------------Footer-------------------------------------------------------------------*/
+/*----------------------------------------------------------------Socials-Login-Register----------------------------------------------------------------*/
+.socials-container {
+    width: fit-content;
+    height: fit-content;
+    gap: 25px;
+}
+
+.social {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid rgb(194, 194, 194);
+}
+
+.twitter:hover {
+    background: linear-gradient(45deg, #66757f, #00acee, #36daff, #dbedff);
+}
+
+.facebook:hover {
+    background: linear-gradient(45deg, #134ac0, #316ff6, #78a3ff);
+}
+
+.google-plus:hover {
+    background: linear-gradient(45deg, #872419, #db4a39, #ff7061);
+}
+
+.instagram:hover {
+    background: #f09433;
+    background: -moz-linear-gradient(45deg,
+            #f09433 0%,
+            #e6683c 25%,
+            #dc2743 50%,
+            #cc2366 75%,
+            #bc1888 100%);
+    background: -webkit-linear-gradient(45deg,
+            #f09433 0%,
+            #e6683c 25%,
+            #dc2743 50%,
+            #cc2366 75%,
+            #bc1888 100%);
+    background: linear-gradient(45deg,
+            #f09433 0%,
+            #e6683c 25%,
+            #dc2743 50%,
+            #cc2366 75%,
+            #bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
+}
+
+.social svg {
+    fill: white;
+    height: 20px;
+}
+/*----------------------------------------------------------------Footer----------------------------------------------------------------*/
+
+/*--------------------------------------------------------------Home-Naval----------------------------------------------------------------*/
+.titleNaval{
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    text-shadow: 2px 2px black;
+}
+
+.home-Naval {
+    background-color: black;
+    background-image: linear-gradient(to bottom, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
 }
