--- a/MilitaryWeb/public/css/home.css
+++ b/MilitaryWeb/public/css/home.css
@@ -1,19 +1,19 @@
 /*----------------------------------------------------------------NavBar----------------------------------------------------------------*/
 .navbar {
-    position: fixed !important; 
-    top: 0 !important; 
-    left: 0 !important; 
-    width: 100% !important; 
-    background-color: transparent !important; 
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    background-color: transparent !important;
     /* Fondo inicialmente transparente */
-    transition: background-color 0.3s ease !important; 
+    transition: background-color 0.3s ease !important;
     /* Transición suave */
-    z-index: 1000 !important; 
+    z-index: 1000 !important;
     /* Asegurar que la barra de navegación esté por encima de otros elementos */
 }
 
 .navbar.opaque {
-    background-color: rgb(24, 24, 28, 0.8) !important; 
+    background-color: rgb(24, 24, 28, 0.8) !important;
 }
 
 /*----------------------------------------------------------------Home-Principal----------------------------------------------------------------*/
@@ -85,6 +85,7 @@
 .buttonHome:hover {
     box-shadow: inset 0px 0px 25px #1479EA;
 }
+
 /*----------------------------------------------------------------Botones-Login-Register----------------------------------------------------------------*/
 
 
@@ -146,10 +147,11 @@
     fill: white;
     height: 20px;
 }
+
 /*----------------------------------------------------------------Footer----------------------------------------------------------------*/
 
 /*--------------------------------------------------------------Home-Naval----------------------------------------------------------------*/
-.titleNaval{
+.titleNaval {
     color: white;
     position: absolute;
     width: 100%;
@@ -166,3 +168,56 @@
     background-color: black;
     background-image: linear-gradient(to bottom, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
 }
+
+/*--------------------------------------------------------------Fondo-Personalizado----------------------------------------------------------------*/
+.patternPersonal2 {
+    width: 100%;
+    height: 100%;
+    --s: 200px;
+    /* control the size */
+    --c1: #DBB186;
+    --c2: #29b0da;
+    --c3: #3b8535;
+
+    background: repeating-conic-gradient(from 30deg,
+            #0000 0 120deg,
+            var(--c3) 0 180deg) calc(0.5 * var(--s)) calc(0.5 * var(--s) * 0.577),
+        repeating-conic-gradient(from 30deg,
+            var(--c1) 0 60deg,
+            var(--c2) 0 120deg,
+            var(--c3) 0 180deg);
+    background-size: var(--s) calc(var(--s) * 0.577);
+}
+
+.patternPersonal {
+    width: 100%;
+    height: 100%;
+    --color: rgba(0, 115, 19, 0.3);
+    background-color: #191a1a;
+    background-image: linear-gradient(
+        180deg,
+        transparent 24%,
+        var(--color) 25%,
+        var(--color) 26%,
+        transparent 27%,
+        transparent 74%,
+        var(--color) 75%,
+        var(--color) 76%,
+        transparent 77%,
+        transparent
+      ),
+      linear-gradient(
+        45deg,
+        transparent 24%,
+        var(--color) 35%,
+        var(--color) 26%,
+        transparent 17%,
+        transparent 74%,
+        var(--color) 75%,
+        var(--color) 76%,
+        transparent 77%,
+        transparent
+      );
+    background-size: 55px 55px;
+  }
+  
