--- a/MilitaryWeb/public/css/home.css
+++ b/MilitaryWeb/public/css/home.css
@@ -169,6 +169,42 @@
     background-image: linear-gradient(to bottom, rgba(0, 1, 1, 0.5), rgb(34, 57, 72));
 }
 
+/*--------------------------------------------------------------Home-Tierra----------------------------------------------------------------*/
+.titleTierra {
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    text-shadow: 2px 2px black;
+}
+
+.home-Tierra {
+    background-image: linear-gradient(to bottom, rgb(121, 127, 117), rgb(204, 169, 106));
+}
+
+/*--------------------------------------------------------------Home-Aire----------------------------------------------------------------*/
+.titleAire {
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    text-shadow: 2px 2px black;
+}
+
+.home-Aire {
+    background-image: linear-gradient(to bottom, rgb(121, 127, 117), rgb(52, 73, 94));
+}
+
 /*--------------------------------------------------------------Fondo-Personalizado----------------------------------------------------------------*/
 .patternPersonal2 {
     width: 100%;
@@ -194,30 +230,25 @@
     height: 100%;
     --color: rgba(0, 115, 19, 0.3);
     background-color: #191a1a;
-    background-image: linear-gradient(
-        180deg,
-        transparent 24%,
-        var(--color) 25%,
-        var(--color) 26%,
-        transparent 27%,
-        transparent 74%,
-        var(--color) 75%,
-        var(--color) 76%,
-        transparent 77%,
-        transparent
-      ),
-      linear-gradient(
-        45deg,
-        transparent 24%,
-        var(--color) 35%,
-        var(--color) 26%,
-        transparent 17%,
-        transparent 74%,
-        var(--color) 75%,
-        var(--color) 76%,
-        transparent 77%,
-        transparent
-      );
+    background-image: linear-gradient(180deg,
+            transparent 24%,
+            var(--color) 25%,
+            var(--color) 26%,
+            transparent 27%,
+            transparent 74%,
+            var(--color) 75%,
+            var(--color) 76%,
+            transparent 77%,
+            transparent),
+        linear-gradient(45deg,
+            transparent 24%,
+            var(--color) 35%,
+            var(--color) 26%,
+            transparent 17%,
+            transparent 74%,
+            var(--color) 75%,
+            var(--color) 76%,
+            transparent 77%,
+            transparent);
     background-size: 55px 55px;
-  }
-  
+}
